--- a/public/p4.css
+++ b/public/p4.css
@@ -343,6 +343,20 @@ display: none;}
 .you_span{font-size: 16px;}
 
 
+.hide_list{   height: 35px;
+    width: 35px;
+    background-color: rgb(51, 51, 51);
+    border: 3px solid rgb(116, 116, 116);
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin-left: auto;
+    display: none}
+
+
+.hide_list i{font-size: 16px;margin: 0;padding: 0;}
+
     @media (max-width: 1200px) {
         .big_users_container{
 position: fixed;
@@ -440,6 +454,7 @@ font-size: 14px;
         }
 
         .users_list {display: flex;}
+              .hide_list{display: flex;}
 
 
 .unread_badge{
